--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <h2>Download Excursion(Coming soon!)</h2>
         <article>
             <figure>
-                <video src="./resources/excursion.mp4" type="video/mp4" autoplay loop>Your broswer does not support 
+                <video src="../resources/excursion.mp4" type="video/mp4" autoplay loop>Your broswer does not support 
                 the video.</video>
             </figure>
             <h1>Your personal travel guide</h1>
@@ -25,8 +25,8 @@
     </section>
 
     <section>
-        <img src="./resources/camp.webp" alt="Camping image">
-        <img src="./resources/phone.webp" alt="phone logo">
+        <img src="../resources/camp.webp" alt="Camping image">
+        <img src="../resources/phone.webp" alt="phone logo">
         <h1>Comming Soon for iPhone and Android</h1>
         <h4>Download Excursion (Coming Soon)</h4>
     </section>
