--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
 
 </head>
 <body>
-    <div>
-        <h1>Descover hidden places in the world around you</h1>
+    <div class="title">
+        <h1>Discover hidden places in the world around you</h1>
     </div>
     <section>
-        <h2>Download Excursion(Coming soon!)</h2>
+        <p class="download">Download Excursion(Coming soon!)</p>
         <article>
             <figure>
-                <video src="../resources/excursion.mp4" type="video/mp4" autoplay loop>Your broswer does not support 
+                <video src="resources/excursion.mp4" type="video/mp4" autoplay loop>Your broswer does not support 
                 the video.</video>
             </figure>
             <h1>Your personal travel guide</h1>
@@ -24,11 +24,11 @@
         </article>
     </section>
 
-    <section>
-        <img src="../resources/camp.webp" alt="Camping image">
-        <img src="../resources/phone.webp" alt="phone logo">
+    <section class="camp">
+        <img src="resources/camp.webp" alt="Camping image">
+        <img class="logo" src="resources/phone.webp" alt="phone logo">
         <h1>Comming Soon for iPhone and Android</h1>
-        <h4>Download Excursion (Coming Soon)</h4>
+        <p>Download Excursion (Coming Soon)</p>
     </section>
     <footer>
         <i class="fa fa-copyright"></i>
