making video work, autoplay to true and loop

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <p class="download">Download Excursion(Coming soon!)</p>
         <article>
             <figure>
-                <video src="resources/excursion.mp4" type="video/mp4" autoplay loop>Your broswer does not support 
+                <video src="resources/excursion.mp4" type="video/mp4" autoplay="true" loop="true">Your broswer does not support 
                 the video.</video>
             </figure>
             <h1>Your personal travel guide</h1>
